# PasswordBook-for-Android

./: ic_launcher.psd  settings.gradle
Photoshop Workspace/: ic_data.psd  ic_export.psd  ic_import.psd  ic_launcher.psd
app/: build.gradle
app/release/: app-release.apk  output-metadata.json
app/src/androidTest/java/online/cszt0/pb/: ExampleInstrumentedTest.java
app/src/androidTest/java/online/cszt0/pb/utils/: TestCrypto.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: license.html
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/libcrypto/: aes.cpp  aes.h  crypto.cpp  native-crypto-legacy.cpp  native-crypto.cpp  sha256.cpp  sha256.h
app/src/main/include/openssl/: bio.h  bn.h
app/src/main/java/online/cszt0/pb/: PBApplication.java
app/src/main/res/anim/: scale_in.xml  scale_out.xml
app/src/main/res/drawable/: ic_data.xml  ic_export.xml  ic_import.xml
app/src/main/res/layout/: activity_hello.xml  activity_main.xml  activity_note_detail.xml  activity_random_password.xml  activity_record_detail.xml  activity_upgrade.xml  dialog_password_input.xml  fragment_main_datalist.xml  item_card_text.xml  item_explorer.xml  item_simple_text.xml
app/src/main/res/menu/: activity_detail_modify.xml  activity_main.xml  activity_record_detail_new.xml  nagative_main.xml
app/src/main/res/values/: attr.xml  colors.xml  strings.xml  stylesheet.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: activity_settings.xml
app/src/test/java/online/cszt0/pb/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+28 files in other folders)
